# speech-ai

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CITATION.cff  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: cd.yaml  ci.yaml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
examples/: animals_questions.py  cohere_example.py  example.ipynb  example.py  openai_example.py
examples/notebooks/: cohere_example.ipynb  openai_example.ipynb
speechai/: __init__.py  utils.py
speechai/core/: generator.py  speechai.py
speechai/llm/: __init__.py  abstract_llm.py  cohere.py  openai.py
speechai/tts/: __init__.py  abstract_tts.py  gtts.py  pyttsx3.py
speechai/utils/: __init__.py  directory.py  logger.py
tests/core/: test_speechai.py
tests/llm/: test_cohere.py  test_openai.py
tests/tts/: test_gtts.py
tests/utils/: test_directory.py
